--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
 
-  <title>The Collapse Center</title>
+  <title>InfoPlug</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,6 +15,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
   <link href="aos/aos.css" rel="stylesheet">
 
+  <link href="fonts/UKNumberPlate.ttf" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Inria+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Roboto:100,300,400,700" rel="stylesheet">
@@ -26,7 +27,10 @@
   <!-- Navigation Bar-->
   <nav class="black nav-bar" role="navigation">
     <div class="nav-wrapper container">
-      <a href="#nav-row1-home" class="brand-logo green-text darken-4"></i>InfoPlug</a>
+      <a href="#nav-row1-home" class="brand-logo green-text darken-4">
+        <span class="banner-header-text-blue">Info</span>
+        <span>Plug</span>
+      </a>
       <ul class="right hide-on-med-and-down green-text darken-4">
         <li><a href="#nav-row1-home" class="green-text darken-4">Home</a></li>
       </ul>
@@ -42,16 +46,16 @@
   <br>
 
   <!-- Article1: Header -->
-  <article class="section no-pad-bot container1 green darken-2" id="nav-row1-home">
+  <article class="section no-pad-bot container1 blue darken-4" id="nav-row1-home">
     <!-- Article1Row1: Header -->
     <div class="container">
       <br><br>
 
-      <h1 class="banner-header-text center white-text">society is collapsing</h1>
+      <h1 class="banner-header-text center white-text"><span class=" banner-header-text-bg-green">DON'T FALL FOR FAKE NEWS!</span></h1>
 
       <h1 class="banner-header-subtext center white-text darken-3 banner-header-container">
-        <span class="txt-rotate" data-period="1500"
-          data-rotate='[ "climate change", "fake news", "wealth inequality", "resource depletion", "pandemics", "social decadence"]'>
+        <span class="txt-rotate" data-period="1200"
+          data-rotate='[ "YES TO FACTS!", "YES TO LOGIC!", "YES TO FREEDOM!", "NO TO THE MAINSTREAM MEDIA!", "NO TO TYRANNY!"]'>
         </span>
       </h1>
 
@@ -64,7 +68,7 @@
 
         <!-- Article1Row2-Column2: Intro Text -->
         <section class="col s12 m8 card-margin" data-aos="fade-up">
-          <p class="white-text flow-text text-heavy"><span class="banner-header-text-bg-blue">Get the facts about The Collapse and why it's happening</span></p>
+          <p class="white-text flow-text text-heavy"><span class="banner-header-text-bg-blue">Get the facts about what's going on and why it's happening</span></p>
           <p class="white-text flow-text text-heavy"><span class="banner-header-text-bg-blue">Information & Updates exposing the dark truths of this planet</span></p>
         </section>
 
