--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <span>Plug</span>
       </a>
       <ul class="right hide-on-med-and-down green-text darken-4">
-        <li><a href="#nav-row1-home" class="green-text darken-4">Home</a></li>
+        <li><a href="#nav-row1-home" class="green-text darken-4">HOME</a></li>
       </ul>
 
-      <ul id="nav-mobile" class="sidenav green darken-3">
-        <li><a href="#nav-row1-home" class="white-text">Home</a></li>
+      <ul id="nav-mobile" class="sidenav black darken-3">
+        <li><a href="#nav-row1-home" class="white-text">HOME</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger green-text darken-4"><i
           class="material-icons">menu</i></a>
@@ -74,8 +74,7 @@
 
         <!-- Article1Row2-Column1: Pic of Flag -->
         <section class="col s12 m4 card-margin" data-aos="fade-up">
-          <img class="max-width-18em center-img-shadow" src="assets/TCC_flag.jpg">
-          <br>
+          <h4 class="col1 s12 m12 center white-text darken-4"><span class="banner-header-text-bg-blue"><i>&nbsp; featured &nbsp;</i></span></h4>
         </section>
 
       </div> <!-- End Article1Row2 About Me Width Limiter END -->
@@ -94,8 +93,8 @@
       <div class="row-width-limiter">
 
         <!-- Article2--Row2: latest news--Section1: latest news text (Column1)-->
-        <section class="col s12 m8 card-margin">
-          <p>Can't load content. The website is temporarily down, sorry.</p>
+        <section class="col s12 m8 card-margin white-text">
+          <p>Can't load content. The website is temporarily down for maintenance, sorry.</p>
         </section>
 
 
